fixing spacing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -230,6 +230,10 @@ p, li {
   text-align: left;
 }
 
+.indented {
+  text-indent: 20px;
+}
+
 
 
 
